create new post: my journey with fedora

--- a/docs/css/lightbox.css
+++ b/docs/css/lightbox.css
@@ -4,6 +4,11 @@ body:after {
   display: none;
 }
 
+img{
+  max-width: 100%;
+  height: auto;
+}
+
 .lightboxOverlay {
   position: absolute;
   top: 0;
