fix urls on index page

--- a/docs/css/redlounge.css
+++ b/docs/css/redlounge.css
@@ -64,6 +64,12 @@ h1 {
     max-width: 100%;
     height: auto;
 }
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 #layout {
     padding: 0;
 }
